fix: support multiple CORS origins and update deploy script